# Korolev-CS-Labs-2024

./: .clang-format  .gitignore  CMakeLists.txt  Encryptor.cpp  Encryptor.h  EquationCalculator.cpp  EquationCalculator.h  IntegralCalculator.cpp  IntegralCalculator.h  Matrix.cpp  Matrix.h  MatrixPrint.cpp  MatrixPrint.h  MatrixTask.cpp  MatrixTask.h  README.md  SortingAlgorithms.cpp  SortingAlgorithms.h  Vector.cpp  Vector.h  checker.py  main.cpp
.github/workflows/: ci.yml
